src/index.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --highlight-color: #a6e3a1;
  --background-color: #1e1e2e;
  --light-background-color: #313244;
  --border-color: #45475a;
}

html,
body {
  width: 100%;
  height: 100%;
}

li {
  list-style: none;
}

#root {
  margin: 0;
  font-family: "JetBrains Mono", monospace;
  background-color: var(--background-color);
  color: #cdd6f4;
  display: grid;
  grid-template-rows: auto 1fr auto;
  height: 100vh;
}

a {
  text-decoration: none;
  color: inherit;
}

header {
  background-color: var(--light-background-color);
  padding: 0.5rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-bottom: 1px solid var(--border-color);
}

header .title {
  color: #f38ba8;
  font-weight: bold;
}

header .nav {
  color: var(--highlight-color);
}

main {
  display: grid;
  grid-template-columns: 250px 1fr;
  height: 100%;
}

aside {
  background-color: #24273a;
  padding: 1rem;
  border-right: 1px solid var(--border-color);
  overflow-y: auto;
}

aside ul {
  list-style: none;
  padding: 0;
  overflow-y: scroll;
}

aside div{
  overflow: hidden;
  height: 100%;
  width: 100%;
}

aside li {
  padding: 0.5rem 0;
  color: var(--highlight-color);
  cursor: pointer;
  overflow: hidden;
  
}

aside li:hover {
  background-color: var(--light-background-color);
}

.link {
  text-overflow: ellipsis;
}

.article-titles {
  background-color: var(--background-color);
  padding: 1rem;
  overflow-y: auto;
  border-left: 1px solid var(--border-color);
}

.article-titles ul {
  list-style: none;
  padding: 0;
}

.article-titles li {
  padding: 0.5rem 1rem;
  color: #89b4fa;
  cursor: pointer;
}

.article-titles li:hover {
  background-color: #313244;
}

footer {
  background-color: var(--light-background-color);
  padding: 0.5rem;
  border-top: 1px solid var(--border-color);
  display: flex;
  align-items: center;
}

footer .command {
  color: #f5c2e7;
  flex-grow: 1;
  background-color: transparent;
  outline: none;
  border: none;
}

footer .mode {
  color: #89b4fa;
}

.notification {
  position: absolute;
  border: 1px solid #89b4fa;
  display: flex;
  right: 0;
  background-color: #24273a;
  border-radius: 3px;
  padding: 10px 1em;
  width: max-content;
  gap: 0 10px;
}

.hide {
  display: none;
}



.help {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border: 1px solid var(--border-color);
  padding: 1.5em;
  border-radius: 8px;
  background-color: var(--light-background-color);
  color: var(--text-color);
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
  width: 50%;
  max-width: 500px;
  z-index: 1000;
  opacity: 0;
  transition: opacity 0.3s ease-in-out;
  display: none; 
}

.help.active {
  display: block;
  opacity: 1;
}

.help h2 {
  text-align: center;
  margin-bottom: 1em;
  font-size: 1.5em;
  color: var(--highlight-color);
  font-family: var(--font-family);
}

.help div {
  padding: 0 1em;
}

.help ul {
  list-style-type: none;
  padding-left: 0;
}

.help ul li {
  display: grid;
  grid-template-columns: 1fr 3fr;
  gap: 0.5em 3em;
  margin-bottom: 1em;
}

.help ul li strong {
  font-weight: bold;
  color: var(--highlight-color);
  justify-self: self-start;
}

.help ul li span {
  color: var(--text-color);
}


.help button {
  background-color: var(--background-color);
  color: white;
  border: 1px solid var(--border-color);
  padding: 0.7em 1.5em;
  cursor: pointer;
  border-radius: 5px;
  font-size: 1em;
  display: block;
  margin: 2em auto 0;
  transition: background-color 0.3s ease;
}

.help button:hover {
  border: 1px solid var(--highlight-color);
}

@media (max-width: 768px) {
  .help {
    width: 80%;
  }

  .help ul li {
    grid-template-columns: 1fr;
    text-align: left;
  }
}

::-webkit-scrollbar {
  background: #24273a;
}

